--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,12 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+    
   flutter:
     sdk: flutter
+  
+
+  http: 0.12.0
 
 
   # The following adds the Cupertino Icons font to your application.
