--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,20 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  # Add the dependency for the Firebase Core Flutter SDK
+  firebase_core: ^0.5.0
+  firebase_auth: ^0.18.0+1
+  firebase: ^7.3.0
+  cloud_firestore: ^0.14.0+2
+
+  path_provider: ^0.4.1
+
+  url_launcher: ^5.5.0
     
   flutter:
     sdk: flutter
+
+ 
   
 
   http: 0.12.0
